--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -80,10 +80,17 @@
 								style="display: none">
 
 						</div>
+						
+						
+						
 						<!-- Add Arrows -->
+						<!--
 						<div class="swiper-button-next"></div>
 						<div class="swiper-button-prev"></div>
+						-->
 					</div>
+					
+					<div class="swiper-pagination"></div>
 
 				</div>
 				
