--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -50,6 +50,10 @@
 	background-color: #9e9e9e;
 }
 
+#misc-info-field .label {
+	font-weight: normal;
+}
+
 @media screen and (max-width: 460px) {
 	.box {
 		padding: 0px;
