--- a/src/main/resources/templates/delete-account.html
+++ b/src/main/resources/templates/delete-account.html
@@ -14,6 +14,7 @@
 	<th:block th:replace="fragments.html::ui-design"></th:block>
 	<link rel="stylesheet" href="/css/lib/bulma-switch.min.css" />
 	<link rel="stylesheet" href="/css/lib/swiper.min.css" />
+	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
 	<title th:text="#{delete-account.title}"></title>
 </head>
@@ -49,7 +50,10 @@
 				</th:block>
 			</div>
 		</div>
-
+		
+		<div class="loader-parent">
+			<div class="loader"></div>
+		</div>
 
 	</div>
 	<footer th:replace="fragments.html::navigation"></footer>
@@ -63,6 +67,7 @@
 	<script src="/js/tools/refresh-captcha.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/modal.js"></script>
+	<script src="/js/tools/loader.js"></script>
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/delete-account.js"></script>
 	<script src="/js/user-profile-modal.js"></script>
