--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -519,7 +519,7 @@
 			<div class="section">
 				<div class="container">
 					<div class="field">
-						<div class="swiper-container swiper-container-user-profile">
+						<div class="swiper swiper-container-user-profile">
 							<div class="swiper-wrapper">
 								<div class="swiper-slide">
 									<div class="center-parent">
@@ -536,13 +536,11 @@
 								</div>
 							</div>
 							<!-- Add Arrows -->
-							<!--
 							<div class="swiper-button-next"></div>
 							<div class="swiper-button-prev"></div>
-							-->
 						</div>
-						<div class="swiper-pagination"></div>
 					</div>
+					<div class="swiper-pagination"></div>
 				</div>
 				<div class="container">
 					<div class="content">
