--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -45,7 +45,7 @@
 
 				<div class="field" id="picture-field">
 
-					<div class="swiper-container">
+					<div class="swiper swiper-container" style="padding-bottom: 50px;">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
 								<div class="center-parent">
@@ -79,20 +79,11 @@
 							</th:block>
 							<input id="addImageInput" type="file" accept="image/*"
 								style="display: none">
-
 						</div>
-						
-						
-						
-						<!-- Add Arrows -->
-						<!--
 						<div class="swiper-button-next"></div>
 						<div class="swiper-button-prev"></div>
-						-->
+						<div class="swiper-pagination" style="bottom: 20px;"></div>
 					</div>
-					
-					<div class="swiper-pagination"></div>
-
 				</div>
 				
 				<div class="box" onclick="window.open('/donate-list', '_blank');" id="donate-box">
